fix - all content

--- a/index.html
+++ b/index.html
@@ -4,27 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Personal Portfolio Website Design | Codehal</title>
+    <title>Zhidani Ramadhan</title>
 
     <!-- box icons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
     <!-- header design -->
     <header class="header">
-      <a href="#" class="logo">Portfolio</a>
+      <a href="#" class="logo">Portofolio</a>
 
       <i class="bx bx-menu" id="menu-icon"></i>
 
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portofolio</a>
+        <a href="#portfolio">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -35,66 +34,61 @@
         <h3>Hello, It's Me</h3>
         <h1>Zhidani Ramadhan</h1>
         <h3>And I'm a <span class="multiple-text"></span></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate deleniti deserunt amet minus praesentium laboriosam illo voluptatibus perferendis iusto, dolorum dicta labore iure, aliquid, unde id sequi quae. Ad, inventore.</p>
+        <p>A Result-Oriented Web Developer building and managing Websites and Web Applications that leads to the success of the overall product</p>
         <div class="social-media">
           <a href="#"><i class="bx bxl-facebook"></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
           <a href="#"><i class="bx bxl-instagram"></i></a>
           <a href="#"><i class="bx bxl-linkedin"></i></a>
         </div>
-        <a href="#" class="btn">Download CV</a>
-      </div>
-      <div class="home-img">
-        <img src="images/home.png" class="home-img" alt="" />
+        <a href="assets/download/ZHIDANI RAMADHAN CV ATS Friendly.pdf" class="btn" download>Download CV</a>
       </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
-      <div class="about-img">
-        <img src="images/about.png" alt="">
-      </div>
-
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
-        <h3>Frontend Developer!</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A dignissimos voluptates illum adipisci possimus eos quasi nulla ab, architecto delectus nam rerum consequuntur amet fugiat placeat esse. Placeat, aut architecto.</p>
-        <a href="#" class="btn">Read More"></a>
+        <p>Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology</p>
+      </div>
+      <div class="about-me">
+        <div class="about-me-content">
+          <h2>Get to know me!</h2>
+          <p> 
+            I am passionate about Web Development. I love to create beautiful and functional websites, spanning from Front-end to Back-end.
+          </p>
+          <p>
+            I believe that every technical challenge presents an opportunity for learning and growth. I am committed to continuously enhancing my programming skills and exploring new technologies.
+          </p>
+          <p>
+            Additionally, I have strong communication and teamwork abilities, enabling me to contribute effectively to collaborative projects.
+          </p>
+          <p>I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me. </p>
+        </div>
+
+        <div class="about-me-skills">
+          <h2>My Skills</h2>
+          <div class="skills">
+            <div class="skill">HTML</div>
+            <div class="skill">CSS</div>
+            <div class="skill">Tailwind</div>
+            <div class="skill">JavaScript</div>
+            <div class="skill">ReactJs</div>
+            <div class="skill">NodeJs</div>
+            <div class="skill">GIT</div>
+            <div class="skill">GitHub</div>
+            <div class="skill">Responsive Design</div>
+          </div>
+        </div>
       </div>
     </section>
 
-    <!-- services section design -->  
-    <section class="services" id="services">
-      <h2 class="heading">Our <span>Services</span></h2>
-
-      <div class="services-container">
-        <div class="services-box">
-          <i class="bx bx-code-alt"></i>
-          <h3>Web Development</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-          <a href="#" class="btn">Read More</a>
-        </div>
-        <div class="services-box">
-          <i class="bx bxs-paint"></i>
-          <h3>Graphic Design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-          <a href="#" class="btn">Read More</a>
-        </div>
-        <div class="services-box">
-          <i class="bx bx-bar-chart-alt "></i>
-          <h3>Digital Marketing</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-          <a href="#" class="btn">Read More</a>
-        </div>
-      </div>
-
-    </section>
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
       <h2 class="heading">Latest <span>Project</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="images/portfolio1.jpg" alt="">
+          <img src="assets/images/portfolio1.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
@@ -103,7 +97,7 @@
         </div>
   
         <div class="portfolio-box">
-          <img src="images/portfolio2.jpg" alt="">
+          <img src="assets/images/portfolio2.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
@@ -112,7 +106,7 @@
         </div>
   
         <div class="portfolio-box">
-          <img src="images/portfolio3.jpg" alt="">
+          <img src="assets/images/portfolio3.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
@@ -121,7 +115,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/portfolio4.jpg" alt="">
+          <img src="assets/images/portfolio4.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
@@ -130,7 +124,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/portfolio5.jpg" alt="">
+          <img src="assets/images/portfolio5.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
@@ -139,7 +133,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/portfolio6.jpg" alt="">
+          <img src="assets/images/portfolio6.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
@@ -153,18 +147,19 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
 
-      <form action="">
+      <form id="contactForm" action="https://formspree.io/f/myyrondn" method="post">
         <div class="input-box">
-          <input type="text" placeholder="Full Name">
-          <input type="email" placeholder="Email Address">
+            <input type="text" name="full_name" placeholder="Full Name" required>
+            <input type="email" name="_replyto" placeholder="Email Address" required>
         </div>
         <div class="input-box">
-          <input type="text" placeholder="Mobile Number">
-          <input type="email" placeholder="Email Subject">
+            <input type="text" name="mobile_number" placeholder="Mobile Number">
+            <input type="text" name="email_subject" placeholder="Email Subject" required>
         </div>
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
         <input type="submit" value="Send Message" class="btn">
-      </form>
+    </form>
+</section>
     </section>
     <!-- footer design -->
     <footer class="footer">
@@ -183,6 +178,6 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
     <!-- custom js -->
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
