--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="projects.html"><i class="bx bx-link-external"></i></a>
           </div>  
         </div>
   
@@ -158,8 +158,7 @@
         </div>
         <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
         <input type="submit" value="Send Message" class="btn">
-    </form>
-</section>
+      </form>
     </section>
     <!-- footer design -->
     <footer class="footer">
