fix projects page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology</p>
       </div>
       <div class="about-me">
-        <div class="about-me-content">
+        <div class="desc-content">
           <h2>Get to know me!</h2>
           <p> 
             I am passionate about Web Development. I love to create beautiful and functional websites, spanning from Front-end to Back-end.
@@ -66,7 +66,7 @@
           <p>I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me. </p>
         </div>
 
-        <div class="about-me-skills">
+        <div class="desc-skills">
           <h2>My Skills</h2>
           <div class="skills">
             <div class="skill">HTML</div>
