--- a/projects.html
+++ b/projects.html
@@ -21,10 +21,8 @@
       <i class="bx bx-menu" id="menu-icon"></i>
 
       <nav class="navbar">
-        <a href="index.html" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#portfolio">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html" class="active">Back Home</a>
+        <a href="#overview">Overview</a>
       </nav> 
     </header>
 
@@ -38,11 +36,11 @@
     </section>
 
     <!-- about section design -->
-    <section class="overview" id="about">
+    <section class="overview" id="overview">
       <h2 class="heading">Project <span>Overview</span></h2>
       </div>
       <div class="about-me">
-        <div class="about-me-content">
+        <div class="desc-content">
           <h2>Description</h2>
           <p> 
             I am passionate about Web Development. I love to create beautiful and functional websites, spanning from Front-end to Back-end.
@@ -56,7 +54,7 @@
           <p>I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me. </p>
         </div>
 
-        <div class="about-me-skills">
+        <div class="desc-skills">
           <h2>Tools Used</h2>
           <div class="skills">
             <div class="skill">HTML</div>
