add project data

--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
         <h3>And I'm a <span class="multiple-text"></span></h3>
         <p>A Result-Oriented Web Developer building and managing Websites and Web Applications that leads to the success of the overall product</p>
         <div class="social-media">
-          <a href="#"><i class="bx bxl-facebook"></i></a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
-          <a href="#"><i class="bx bxl-instagram"></i></a>
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/ZhidanRn"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/zhidanir/"><i class="bx bxl-linkedin"></i></a>
         </div>
         <a href="assets/download/ZHIDANI RAMADHAN CV ATS Friendly.pdf" class="btn" download>Download CV</a>
       </div>
@@ -86,60 +84,7 @@
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
       <h2 class="heading">Latest <span>Project</span></h2>
-      <div class="portfolio-container">
-        <div class="portfolio-box">
-          <img src="assets/images/portfolio1.jpg" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-            <a href="projects.html"><i class="bx bx-link-external"></i></a>
-          </div>  
-        </div>
-  
-        <div class="portfolio-box">
-          <img src="assets/images/portfolio2.jpg" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>  
-        </div>
-  
-        <div class="portfolio-box">
-          <img src="assets/images/portfolio3.jpg" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>  
-        </div>
-
-        <div class="portfolio-box">
-          <img src="assets/images/portfolio4.jpg" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>  
-        </div>
-
-        <div class="portfolio-box">
-          <img src="assets/images/portfolio5.jpg" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>  
-        </div>
-
-        <div class="portfolio-box">
-          <img src="assets/images/portfolio6.jpg" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>  
-        </div>
+      <div class="portfolio-container" id="portfolio-container">
       </div>
     </section>
 
@@ -154,7 +99,7 @@
         </div>
         <div class="input-box">
             <input type="text" name="mobile_number" placeholder="Mobile Number">
-            <input type="text" name="email_subject" placeholder="Email Subject" required>
+            <input type="text" name="email_subject" placeholder="Subject" required>
         </div>
         <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
         <input type="submit" value="Send Message" class="btn">
@@ -177,6 +122,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
     <!-- custom js -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/app.js"></script>
+    <script src="assets/js/api.js"></script>
   </body>
 </html>
