--- a/projects.html
+++ b/projects.html
@@ -29,49 +29,30 @@
     <!-- home section design -->
     <section class="project" id="home">
         <div class="project-content">
-          <h2 class="heading">Sport's <span>Wear</span></h2>
-          <img src="assets/images/portfolio1.jpg" alt="" />
+          <h2 class="heading" id="title"></h2>
+          <div class="image-container" id="image"></div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro repudiandae iusto hic ad illo impedit corporis est libero, deserunt minus ipsam labore doloremque repellendus quod laboriosam earum dicta magni ipsum!</p>
     </section>
 
-    <!-- about section design -->
+    <!-- Project Overview section design -->
     <section class="overview" id="overview">
       <h2 class="heading">Project <span>Overview</span></h2>
       </div>
       <div class="about-me">
         <div class="desc-content">
           <h2>Description</h2>
-          <p> 
-            I am passionate about Web Development. I love to create beautiful and functional websites, spanning from Front-end to Back-end.
-          </p>
-          <p>
-            I believe that every technical challenge presents an opportunity for learning and growth. I am committed to continuously enhancing my programming skills and exploring new technologies.
-          </p>
-          <p>
-            Additionally, I have strong communication and teamwork abilities, enabling me to contribute effectively to collaborative projects.
-          </p>
-          <p>I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me. </p>
+          <p id="desc"></p>
+          <strong id="label-cont"></strong>
+          <ul id="contribute"></ul>
         </div>
 
         <div class="desc-skills">
           <h2>Tools Used</h2>
-          <div class="skills">
-            <div class="skill">HTML</div>
-            <div class="skill">CSS</div>
-            <div class="skill">Tailwind</div>
-            <div class="skill">JavaScript</div>
-            <div class="skill">ReactJs</div>
-            <div class="skill">NodeJs</div>
-            <div class="skill">GIT</div>
-            <div class="skill">GitHub</div>
-            <div class="skill">Responsive Design</div>
+          <div class="skills" id="skills">
           </div>
         </div>
       </div>
-      <div class="btn-box">
-        <a href="#" class="btn">LIVE PROJECT</a>
-        <a href="#" class="btn">SOURCE CODE</a>
+      <div class="btn-box" id="btn-box">
       </div>
     </section>
 
@@ -92,6 +73,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
     <!-- custom js -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
