add project 2 and fix the overview section

--- a/projects.html
+++ b/projects.html
@@ -38,10 +38,13 @@
     <section class="overview" id="overview">
       <h2 class="heading">Project <span>Overview</span></h2>
       </div>
-      <div class="about-me">
+      <div class="overview-content">
         <div class="desc-content">
-          <h2>Description</h2>
           <p id="desc"></p>
+          
+          <strong>Key Features:</strong>
+          <ul id="keyfeatures"></ul>
+
           <strong id="label-cont"></strong>
           <ul id="contribute"></ul>
         </div>
@@ -51,8 +54,9 @@
           <div class="skills" id="skills">
           </div>
         </div>
-      </div>
-      <div class="btn-box" id="btn-box">
+
+        <div class="btn-box" id="btn-box">
+        </div>
       </div>
     </section>
 
