--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
   <body>
     <!-- header design -->
     <header class="header">
-      <a href="#" class="logo">Portofolio</a>
+      <a href="#" class="logo">Portfolio</a>
 
       <i class="bx bx-menu" id="menu-icon"></i>
 
