--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <div class="skill">Tailwind</div>
             <div class="skill">JavaScript</div>
             <div class="skill">ReactJs</div>
+            <div class="skill">NextJs</div>
             <div class="skill">NodeJs</div>
             <div class="skill">GIT</div>
             <div class="skill">GitHub</div>
