--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="skill">CSS</div>
             <div class="skill">Tailwind</div>
             <div class="skill">JavaScript</div>
+            <div class="skill">TypeScript</div>
             <div class="skill">ReactJs</div>
             <div class="skill">NextJs</div>
             <div class="skill">NodeJs</div>
